# stock-predict

./: .commitmsg  .gitignore  AGENTS.md  AI_CONTEXT.md  API_CONTRACT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_BIBLE.md  DESIGN_BIBLE_NEXT.md  PROJECT_EVALUATION_REPORT.md  README.md  ROUTE_STABILITY_CHECKLIST.md  dev_runtime.py  package-lock.json  package.json  pyproject.toml  render.yaml  start.cmd  start.ps1  start.py  verify.cmd  verify.ps1  verify.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  render-deploy.yml  render-keepalive.yml
.vercel/: project.json
app/: __init__.py
backend/: .env.example  requirements.txt
backend/app/: auth.py  config.py  database.py  errors.py  exceptions.py  main.py  runtime.py  version.py
backend/scripts/: live_api_smoke.py
backend/tests/: client_helpers.py  test_account_router.py  test_account_service.py  test_api_error_contracts.py  test_archive_service.py  test_async_tools.py  test_auth_dependencies.py  test_briefing_router.py  test_briefing_service.py  test_browser_smoke_runtime.py  test_cache_and_universe.py  test_calendar_service.py  test_chart_setup.py  test_confidence_calibration_service.py  test_confidence_scoring.py  test_contact_router.py  test_country_analyzer.py  test_country_router.py  test_llm_client.py  (+52 more)
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: browser_smoke.py  deployed_site_smoke.py  evaluation_gate.py  frontend_npm.js  latency_probe.py  reversible_auth_smoke.py  route_contracts.py  wait_for_deployed_version.py
(+378 files in other folders)
